@@ -11,6 +11,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 **    SystemPerl mode is deprecated and now untested.
 
+***   Inline C functions that are used only once, msg1525. [Jie Xu]
+
 
 * Verilator 3.866 2014-11-15
 
